Test and fix new implementations

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -240,7 +240,7 @@
     "from utils.moving_estimators import MovingEstimator\n",
     "\n",
     "# for live analysis\n",
-    "distances_cm = np.arange(100, step=5)\n",
+    "distances_cm = np.arange(100, step=1)\n",
     "angles_deg = np.arange(360, step=30)\n",
     "\n",
     "# for offline analysis\n",
@@ -351,10 +351,7 @@
     "                # important to reinitialize!\n",
     "                distance_estimator = DistanceEstimator()\n",
     "\n",
-    "                inf_machine.add_data(\n",
-    "                    values_unsorted_calib[i],\n",
-    "                    freqs,\n",
-    "                )\n",
+    "                inf_machine.add_data(values_unsorted_calib[i], freqs)\n",
     "                \n",
     "                inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
     "                \n",
@@ -374,7 +371,7 @@
     "                moving_estimator.add_distributions(\n",
     "                    diff_moving, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "                )\n",
-    "                prob_moving, prob_angle_moving = moving_estimator.get_distributions(local=True)\n",
+    "                __, prob_moving, __, prob_angle_moving = moving_estimator.get_distributions(simplify_angles=False)\n",
     "                time_moving += int(1000*(time.time() - t1))\n",
     "                \n",
     "                dist_est_cm = dists_cm[np.argmax(prob_moving)]\n",
@@ -387,15 +384,18 @@
     "                results_matrix_moving[:, i] = prob_moving \n",
     "                results_matrix_angles_moving[:, i] = prob_angle_moving \n",
     "                \n",
-    "                continue\n",
+    "                #continue\n",
     "                # DEBUGGING ONLY\n",
-    "                dist = moving_estimator.get_joint_distribution()\n",
+    "                dist, *_ = moving_estimator.get_joint_distribution(simplify_angles=False)\n",
     "                fig, ax = plt.subplots()\n",
     "                pcolorfast_custom(ax, distances_cm, angles_deg, dist)\n",
     "                ax.axvline(distances[i], color='white', ls=':')\n",
     "                ax.axhline(90, color='white', ls=':')\n",
+    "                ax.set_xlabel('distances [cm]')\n",
+    "                ax.set_ylabel('angles [deg]')\n",
+    "                ax.set_title(\"joint distribution\")\n",
     "\n",
-    "            d_estimates = get_estimates(results_matrix, dists_cm)\n",
+    "            d_estimates = get_estimates_here(results_matrix, dists_cm)\n",
     "            errors_df.loc[len(errors_df), :] = {\n",
     "                \"algorithm\": algorithm,\n",
     "                \"mics\": mics_str,\n",
@@ -410,7 +410,8 @@
     "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
     "            #save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "\n",
-    "            d_estimates_moving = get_estimates(results_matrix_moving, distances_cm)\n",
+    "            d_estimates_moving = get_estimates_here(results_matrix_moving, distances_cm)\n",
+    "            print(distances-d_estimates_moving)\n",
     "            errors_df.loc[len(errors_df), :] = {\n",
     "                \"algorithm\": algorithm + f\"_win{n_window}\",\n",
     "                \"mics\": mics_str,\n",
@@ -428,12 +429,12 @@
     "            \n",
     "            gt_angles = np.full(len(distances), 90)\n",
     "            \n",
-    "            angle_estimates = get_estimates(results_matrix_angles, azimuths_deg)\n",
+    "            angle_estimates = get_estimates_here(results_matrix_angles, azimuths_deg)\n",
     "            fig, ax = plot_matrix(azimuths_deg, results_matrix_angles, gt_angles, no_deco=no_deco, angles=True, log=False)\n",
     "            if calib_method == 'on_the_fly':\n",
     "                add_rect(ax, n_calib, max(azimuths_deg), no_deco=no_deco)\n",
     "            \n",
-    "            angle_estimates_moving = get_estimates(results_matrix_angles_moving, angles_deg)\n",
+    "            angle_estimates_moving = get_estimates_here(results_matrix_angles_moving, angles_deg)\n",
     "            fig, ax = plot_matrix(angles_deg, results_matrix_angles_moving, \n",
     "                                  gt_angles, no_deco=no_deco, log=False, angles=True)\n",
     "            if calib_method == 'on_the_fly':\n",
@@ -473,11 +474,6 @@
     "n_estimates = 1\n",
     "print(angle_matrix.shape, dist_matrix.shape)\n",
     "\n",
-    "# below doesn't work well\n",
-    "#dist_matrix = results_matrix\n",
-    "#angle_matrix = results_matrix_angles\n",
-    "#n_estimates = 2\n",
-    "\n",
     "d_estimates = []\n",
     "d_gt = []\n",
     "\n",
@@ -495,7 +491,8 @@
     "    distance_gt = int(wall_y_cm - position_cm[1])\n",
     "    if use_groundtruth:\n",
     "        prob_dists = np.zeros(len(distances_cm))\n",
-    "        prob_dists[distance_gt] = 1.0\n",
+    "        idx = np.where(distances_cm == distance_gt)[0]\n",
+    "        prob_dists[idx] = 1.0\n",
     "        \n",
     "        prob_angles = np.zeros(len(angles_deg))\n",
     "        prob_angles[angles_deg==90] = 1.0\n",
@@ -504,14 +501,14 @@
     "        \n",
     "    wall_backend.add_planes_from_distributions(distances_cm, prob_dists, \n",
     "                                               angles_deg, prob_angles, \n",
-    "                                               limit_distance=50,\n",
+    "                                               limit_distance=20,\n",
     "                                               n_estimates=n_estimates, \n",
     "                                               verbose=False)\n",
     "    \n",
     "    wall_backend.check_wall(verbose=True)\n",
     "    distance_estimate = wall_backend.get_distance_estimate()\n",
     "    d_estimates.append(distance_estimate * 1e2 if distance_estimate else np.nan)\n",
-    "    d_gt.append(distance_gt)\n",
+    "    d_gt.append(distance_gt if distance_estimate else np.nan)\n",
     "    #print(f\"time with isam={wall_backend.use_isam}: {(time.time() - t1)*1e3:.0f}ms\")\n",
     "\n",
     "errors_df.loc[len(errors_df), :] = {\n",
@@ -565,19 +562,10 @@
    "source": [
     "from utils.plotting_tools import plot_performance, save_fig\n",
     "\n",
-    "#exp_name = '2021_10_12_flying'\n",
-    "\n",
-    "#fname = f'../datasets/{exp_name}/results.pkl'\n",
-    "#errors_df = pd.read_pickle(fname)\n",
-    "\n",
-    "#chosen_mics = '[0,1,2,3]'\n",
-    "#filtered_df = errors_df.loc[errors_df.mics==chosen_mics]\n",
-    "\n",
-    "filtered_df = errors_df \n",
     "groupby = ['mics', 'algorithm']\n",
     "\n",
     "total_err_dict = {}\n",
-    "for j, (labels, df) in enumerate(filtered_df.groupby(groupby, sort=False)):\n",
+    "for j, (labels, df) in enumerate(errors_df.groupby(groupby, sort=False)):\n",
     "    params = dict(zip(groupby, labels))\n",
     "        \n",
     "    err_dict = {}\n",
@@ -626,8 +614,8 @@
     "    key = total_dict['algorithm']\n",
     "    errors = total_dict['errors']\n",
     "    dists = total_dict['distances']\n",
-    "    err_dict[key] = errors[dists < 40]\n",
-    "    dist_dict[key] = dists[dists < 40]\n",
+    "    err_dict[key] = errors[dists < max_dist]\n",
+    "    dist_dict[key] = dists[dists < max_dist]\n",
     "    \n",
     "fig, axs = plot_performance(err_dict, xs_dict=dist_dict, xlabel=\"distance [cm]\", ylabel=\"error [cm]\", marker_flag=False)\n",
     "axs[0].get_legend().set_visible(False)\n",
@@ -722,7 +710,7 @@
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
     "\n",
-    "n_timesteps = magnitudes.shape[0] #-1\n",
+    "n_timesteps = 50 #magnitudes.shape[0] #-1\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
@@ -759,6 +747,7 @@
     "wall_backend = WallBackend(use_isam=True)\n",
     "d_estimates = []\n",
     "raw_d_estimates = []\n",
+    "raw_d_gt = []\n",
     "colors = []\n",
     "angle_estimates = []\n",
     "angles_forward = []\n",
@@ -807,6 +796,7 @@
     "    raw_d_estimates.append({\n",
     "        method: get_estimates(DISTANCES_CM, prob_moving_dist, n_estimates=1, method=method) for method in [\"mean\", \"max\", \"peak\"]\n",
     "    })\n",
+    "    raw_d_gt.append(distances[i])\n",
     "    \n",
     "    wall_backend.add_plane_from_distances(DISTANCES_CM, prob_moving_dist, verbose=False, method=estimation_method)\n",
     "    #wall_backend.check_wall(verbose=True)\n",
@@ -834,13 +824,25 @@
    "outputs": [],
    "source": [
     "colors_dict = {method: f\"C{i}\" for i, method in enumerate(raw_d_estimates[0].keys())}\n",
+    "means_dict = {method: [] for method in raw_d_estimates[0].keys()}\n",
+    "stds_dict = {method: [] for method in raw_d_estimates[0].keys()}\n",
     "fig, axs = plt.subplots(1, 2)\n",
-    "fig.set_size_inches(10, 5)\n",
+    "fig.set_size_inches(20, 5)\n",
     "[axs[0].scatter([], [], label=method, color=color) for method, color in colors_dict.items()]\n",
     "for i, dicts in enumerate(raw_d_estimates):\n",
     "    for method, estimate in dicts.items():\n",
-    "        axs[0].scatter(i, estimate[0], color=colors_dict[method])\n",
-    "        axs[1].scatter(i, estimate[1], color=colors_dict[method])\n",
+    "        means_dict[method].append(estimate[0][0])\n",
+    "        stds_dict[method].append(estimate[1][0])\n",
+    "\n",
+    "for method, line in means_dict.items():\n",
+    "    axs[0].plot(line, color=colors_dict[method])\n",
+    "for method, line in stds_dict.items():\n",
+    "    print(method, line)\n",
+    "    axs[1].plot(line, color=colors_dict[method])\n",
+    "axs[0].plot(raw_d_gt[:n_timesteps], color='k')\n",
+    "axs[0].set_ylim(5, 70)\n",
+    "\n",
+    "axs[0].plot\n",
     "axs[0].legend()\n",
     "axs[1].set_yscale('log')"
    ]
