Add IIR calibration

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -710,7 +710,7 @@
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
     "\n",
-    "n_timesteps = 50 #magnitudes.shape[0] #-1\n",
+    "n_timesteps = magnitudes.shape[0] \n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
@@ -760,15 +760,13 @@
     "    \n",
     "    position_cm = positions_cm[i, :] \n",
     "\n",
-    "    if i == N_CALIBRATION:\n",
-    "        print(\"change state\")\n",
-    "        calib = False\n",
-    "        \n",
+    "    #if i == N_CALIBRATION:\n",
+    "        #print(\"change state\")\n",
+    "        #calib = True\n",
     "        \n",
     "    res = wall_detection.listener_callback_offline(\n",
     "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], calib=calib, timestamp=times[i]*1e3\n",
     "    )\n",
-    "    \n",
     "    \n",
     "    if i <= N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
@@ -780,11 +778,13 @@
     "    if res is None:\n",
     "        print(\"no result yet!\")\n",
     "        \n",
+    "    var = wall_detection.calibrationsq - wall_detection.calibration**2\n",
+    "    plt.plot(freqs, var[0, :])\n",
+    "        \n",
     "    angle_local = wall_detection.moving_estimator.get_local_forward_angle()\n",
     "    angles_forward.append(angle_local)\n",
     "        \n",
     "    __, __, prob_moving_dist, prob_moving_angle = res\n",
-    "\n",
     "        \n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    #results_matrix_angles[:, i] = prob_moving_angle\n",
@@ -805,7 +805,8 @@
     "    angle_deg = wall_backend.get_angle_estimate()\n",
     "    d_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
     "    colors.append(f\"C{wall_backend.plane_index+1}\")\n",
-    "    angle_estimates.append(angle_deg)"
+    "    angle_estimates.append(angle_deg)\n",
+    "plt.grid()"
    ]
   },
   {
@@ -837,10 +838,9 @@
     "for method, line in means_dict.items():\n",
     "    axs[0].plot(line, color=colors_dict[method])\n",
     "for method, line in stds_dict.items():\n",
-    "    print(method, line)\n",
     "    axs[1].plot(line, color=colors_dict[method])\n",
     "axs[0].plot(raw_d_gt[:n_timesteps], color='k')\n",
-    "axs[0].set_ylim(5, 70)\n",
+    "axs[0].set_ylim(5, 100)\n",
     "\n",
     "axs[0].plot\n",
     "axs[0].legend()\n",
