Add outlier rejection

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -112,6 +112,9 @@
     "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
     "    if xvalues is None:\n",
     "        xvalues = gt_values\n",
+    "        xlabel = \"real distance [cm]\"\n",
+    "    else:\n",
+    "        xlabel = \"time [s]\"\n",
     "        \n",
     "    estimates = get_estimates_here(results_matrix, yvalues)\n",
     "    n_points = results_matrix.shape[1]\n",
@@ -153,7 +156,7 @@
     "            ax.set_xlabel(\"real angle [cm]\")\n",
     "        else:\n",
     "            ax.set_ylabel(\"estimated distance [cm]\")\n",
-    "            ax.set_xlabel(\"real distance [cm]\")\n",
+    "            ax.set_xlabel(xlabel)\n",
     "        #ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
     "        leg = ax.legend(framealpha=0, loc='upper right')\n",
     "        for text in leg.get_texts():\n",
@@ -710,7 +713,7 @@
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
     "\n",
-    "n_timesteps = magnitudes.shape[0] \n",
+    "n_timesteps = 50 #magnitudes.shape[0] \n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
@@ -726,7 +729,7 @@
    "source": [
     "from audio_gtsam.wall_backend import WallBackend\n",
     "from utils.moving_estimators import get_estimates\n",
-    "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG, N_CALIBRATION\n",
+    "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG, N_CALIBRATION, CALIBRATION\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "no_deco = False\n",
@@ -755,18 +758,22 @@
     "results_matrix_angles = np.full((len(ANGLES_DEG), n_timesteps), np.nan)\n",
     "results_matrix_moving = np.full((len(DISTANCES_CM), n_timesteps), np.nan)\n",
     "\n",
+    "\n",
+    "\n",
     "calib = True\n",
     "for i in range(n_timesteps):\n",
     "    \n",
     "    position_cm = positions_cm[i, :] \n",
     "\n",
-    "    #if i == N_CALIBRATION:\n",
-    "        #print(\"change state\")\n",
-    "        #calib = True\n",
+    "    if i == N_CALIBRATION and CALIBRATION == \"fixed\":\n",
+    "        print(\"stop calibrating\")\n",
+    "        calib = False\n",
     "        \n",
     "    res = wall_detection.listener_callback_offline(\n",
     "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], calib=calib, timestamp=times[i]*1e3\n",
     "    )\n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #ax.pcolorfast(wall_detection.calibration_data[0, :, :])\n",
     "    \n",
     "    if i <= N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
@@ -778,8 +785,8 @@
     "    if res is None:\n",
     "        print(\"no result yet!\")\n",
     "        \n",
-    "    var = wall_detection.calibrationsq - wall_detection.calibration**2\n",
-    "    plt.plot(freqs, var[0, :])\n",
+    "    #plt.plot(freqs, wall_detection.calibration[0, :])\n",
+    "    #plt.plot(freqs, wall_detection.calibration_std[0, :])\n",
     "        \n",
     "    angle_local = wall_detection.moving_estimator.get_local_forward_angle()\n",
     "    angles_forward.append(angle_local)\n",
@@ -803,10 +810,10 @@
     "    \n",
     "    d_estimate = wall_backend.get_distance_estimate()\n",
     "    angle_deg = wall_backend.get_angle_estimate()\n",
+    "    \n",
     "    d_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
-    "    colors.append(f\"C{wall_backend.plane_index+1}\")\n",
     "    angle_estimates.append(angle_deg)\n",
-    "plt.grid()"
+    "    colors.append(f\"C{wall_backend.plane_index+1}\")"
    ]
   },
   {
