Add first implementation of forgetting factor (not tested yet)

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -15,6 +15,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import scipy.stats\n",
+    "import matplotlib.pylab as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "scale1 = 1.0\n",
+    "scale2 = 2.0\n",
+    "loc1=0\n",
+    "loc2=3.0\n",
+    "n1 = scipy.stats.norm(loc=loc1, scale=scale1)\n",
+    "n2 = scipy.stats.norm(loc=loc2, scale=scale2)\n",
+    "\n",
+    "scale_conv = np.sqrt(scale1**2 + scale2**2)\n",
+    "n_conv = scipy.stats.norm(loc=loc1 + loc2, scale=scale_conv)\n",
+    "\n",
+    "values = np.linspace(-10, 10, 100)\n",
+    "n1_pdf = n1.pdf(values)\n",
+    "n1_pdf /= np.sum(n1_pdf)\n",
+    "plt.plot(values, n1_pdf, label=f'N1 ({scale1:.1f})')\n",
+    "\n",
+    "n2_pdf = n2.pdf(values)\n",
+    "n2_pdf /= np.sum(n2_pdf)\n",
+    "plt.plot(values, n2_pdf, label=f'N2 ({scale2:.1f})')\n",
+    "\n",
+    "n_conv_pdf = n_conv.pdf(values)\n",
+    "n_conv_pdf /= np.sum(n_conv_pdf)\n",
+    "plt.plot(values, n_conv_pdf, label=f'N1 * N2 ({scale_conv:.1f})')\n",
+    "\n",
+    "# compute new distribution through exponentiation. \n",
+    "n2_new = scipy.stats.norm(loc1 + loc2, scale=scale1)\n",
+    "alphas = [scale1**2 / (scale_conv**2)]\n",
+    "for i, alpha in enumerate(alphas):\n",
+    "    approx_pdf = n2_new.pdf(values) ** alpha\n",
+    "    approx_pdf /= np.sum(approx_pdf)\n",
+    "    plt.plot(values, approx_pdf, label=f'N2 ^ {alpha:.1f}', ls=\":\", color=f\"C{i}\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import math\n",
     "import sys\n",
     "\n",
@@ -125,7 +168,7 @@
     "        np.arange(n_points),\n",
     "        yvalues,\n",
     "        np.log10(results_matrix) if log else results_matrix,\n",
-    "        vmin=-3 if log else None,\n",
+    "        #vmin=-2 if log else None,\n",
     "    )\n",
     "    ax.plot(\n",
     "        np.arange(n_points) + 0.5,\n",
@@ -164,8 +207,7 @@
     "        ax.set_xticklabels(np.round(xvalues, 1), rotation=90)\n",
     "        ax.set_yticks(np.arange(min(yvalues), max(yvalues), step=10))\n",
     "        ax.set_yticklabels(np.arange(min(yvalues), max(yvalues), step=10).astype(int))\n",
-    "    return fig, ax\n",
-    "\n"
+    "    return fig, ax"
    ]
   },
   {
@@ -713,7 +755,7 @@
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
     "\n",
-    "n_timesteps = 50 #magnitudes.shape[0] \n",
+    "n_timesteps = magnitudes.shape[0] \n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
@@ -732,20 +774,14 @@
     "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG, N_CALIBRATION, CALIBRATION\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
+    "estimation_method = \"peak\"\n",
+    "\n",
     "no_deco = False\n",
     "wall_detection = WallDetection()\n",
-    "calib_method = \"on_the_fly\"\n",
-    "mics = [0, 1, 2, 3]\n",
-    "#mics = [3] # towards\n",
-    "#mics = [0] # towards\n",
-    "#mics = [2] # back\n",
     "algorithm = \"bayes\" #\"cost\" #\"bayes\"\n",
-    "#save_fig(fig, plot_name)\n",
     "# because wall is at 90 degrees.\n",
     "# TODO: make this statement more general\n",
     "distances = wall_y_cm - positions_cm[:, 1]\n",
-    "\n",
-    "estimation_method = \"peak\"\n",
     "\n",
     "wall_backend = WallBackend(use_isam=True)\n",
     "d_estimates = []\n",
@@ -757,8 +793,6 @@
     "\n",
     "results_matrix_angles = np.full((len(ANGLES_DEG), n_timesteps), np.nan)\n",
     "results_matrix_moving = np.full((len(DISTANCES_CM), n_timesteps), np.nan)\n",
-    "\n",
-    "\n",
     "\n",
     "calib = True\n",
     "for i in range(n_timesteps):\n",
