Fix NaN handling and implement quantitative evaluation

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -79,8 +79,8 @@
     "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
     "rcParams[\"font.size\"] = 12\n",
     "\n",
-    "import rclpy\n",
-    "rclpy.init()"
+    "#import rclpy\n",
+    "#rclpy.init()"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "    ax.plot(\n",
     "        np.arange(n_points) + 0.5,\n",
     "        gt_values,\n",
-    "        color=\"white\",\n",
+    "        color=\"black\",\n",
     "        label=\"ground truth\",\n",
     "        marker='x'\n",
     "    )\n",
@@ -755,7 +755,12 @@
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
     "\n",
-    "n_timesteps = magnitudes.shape[0] \n",
+    "n_timesteps = 50 #magnitudes.shape[0] \n",
+    "\n",
+    "# because wall is at 90 degrees.\n",
+    "# TODO: make this statement more general\n",
+    "distances_wall1 = wall_y_cm - positions_cm[:, 1]\n",
+    "distances_wall2 = 200 - distances_wall1\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
@@ -771,19 +776,15 @@
    "source": [
     "from audio_gtsam.wall_backend import WallBackend\n",
     "from utils.moving_estimators import get_estimates\n",
-    "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG, N_CALIBRATION, CALIBRATION\n",
+    "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "estimation_method = \"peak\"\n",
     "\n",
     "no_deco = False\n",
-    "wall_detection = WallDetection()\n",
-    "algorithm = \"bayes\" #\"cost\" #\"bayes\"\n",
-    "# because wall is at 90 degrees.\n",
-    "# TODO: make this statement more general\n",
-    "distances = wall_y_cm - positions_cm[:, 1]\n",
-    "\n",
+    "wall_detection = WallDetection(python_only=True)\n",
     "wall_backend = WallBackend(use_isam=True)\n",
+    "\n",
     "d_estimates = []\n",
     "raw_d_estimates = []\n",
     "raw_d_gt = []\n",
@@ -799,7 +800,7 @@
     "    \n",
     "    position_cm = positions_cm[i, :] \n",
     "\n",
-    "    if i == N_CALIBRATION and CALIBRATION == \"fixed\":\n",
+    "    if i == WallDetection.N_CALIBRATION and WallDetection.CALIBRATION == \"fixed\":\n",
     "        print(\"stop calibrating\")\n",
     "        calib = False\n",
     "        \n",
@@ -809,7 +810,7 @@
     "    #fig, ax = plt.subplots()\n",
     "    #ax.pcolorfast(wall_detection.calibration_data[0, :, :])\n",
     "    \n",
-    "    if i <= N_CALIBRATION:\n",
+    "    if i <= WallDetection.N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
     "        angle_estimates.append(None)\n",
     "        angles_forward.append(None)\n",
@@ -837,7 +838,7 @@
     "    raw_d_estimates.append({\n",
     "        method: get_estimates(DISTANCES_CM, prob_moving_dist, n_estimates=1, method=method) for method in [\"mean\", \"max\", \"peak\"]\n",
     "    })\n",
-    "    raw_d_gt.append(distances[i])\n",
+    "    raw_d_gt.append(distances_wall1[i])\n",
     "    \n",
     "    wall_backend.add_plane_from_distances(DISTANCES_CM, prob_moving_dist, verbose=False, method=estimation_method)\n",
     "    #wall_backend.check_wall(verbose=True)\n",
@@ -847,7 +848,8 @@
     "    \n",
     "    d_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
     "    angle_estimates.append(angle_deg)\n",
-    "    colors.append(f\"C{wall_backend.plane_index+1}\")"
+    "    colors.append(f\"C{wall_backend.plane_index+1}\")\n",
+    "#plt.plot(times[:n_timesteps], angles_forward)"
    ]
   },
   {
@@ -856,7 +858,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(times[:n_timesteps], angles_forward)"
+    "DIST_THRESH = 20\n",
+    "TAIL_THRESH = -4\n",
+    "STD_THRESH = 1\n",
+    "\n",
+    "D_FALSE_POS = 40\n",
+    "D_FALSE_NEG = 20\n",
+    "\n",
+    "from utils.moving_estimators import get_estimate\n",
+    "\n",
+    "def detect_wall(distances_cm, prob_moving_dist, method=\"distance-mean\"):\n",
+    "    if \"distance\" in method:\n",
+    "        d_estimate, __ = get_estimate(distances_cm, prob_moving_dist, method=method.lstrip(\"distance-\"))\n",
+    "        if d_estimate is None:\n",
+    "            return None\n",
+    "            #return False\n",
+    "        return d_estimate < DIST_THRESH\n",
+    "    elif method == \"std\":\n",
+    "        __, std = get_estimate(distances_cm, prob_moving_dist, method=estimation_method)\n",
+    "        if std is None:\n",
+    "            return None\n",
+    "            #return False\n",
+    "        return std < STD_THRESH\n",
+    "    elif method == \"tail\":\n",
+    "        if np.mean(prob_moving_dist[-3:]) == 0:\n",
+    "            return None\n",
+    "            #return False\n",
+    "        tail = np.log10(np.mean(prob_moving_dist[-3:]))\n",
+    "        return tail < TAIL_THRESH"
    ]
   },
   {
@@ -868,11 +897,13 @@
     "colors_dict = {method: f\"C{i}\" for i, method in enumerate(raw_d_estimates[0].keys())}\n",
     "means_dict = {method: [] for method in raw_d_estimates[0].keys()}\n",
     "stds_dict = {method: [] for method in raw_d_estimates[0].keys()}\n",
-    "fig, axs = plt.subplots(1, 2)\n",
-    "fig.set_size_inches(20, 5)\n",
+    "fig, axs = plt.subplots(2, 1)\n",
+    "fig.set_size_inches(20, 10)\n",
     "[axs[0].scatter([], [], label=method, color=color) for method, color in colors_dict.items()]\n",
     "for i, dicts in enumerate(raw_d_estimates):\n",
     "    for method, estimate in dicts.items():\n",
+    "        if method != \"mean\":\n",
+    "            continue\n",
     "        means_dict[method].append(estimate[0][0])\n",
     "        stds_dict[method].append(estimate[1][0])\n",
     "\n",
@@ -880,28 +911,141 @@
     "    axs[0].plot(line, color=colors_dict[method])\n",
     "for method, line in stds_dict.items():\n",
     "    axs[1].plot(line, color=colors_dict[method])\n",
-    "axs[0].plot(raw_d_gt[:n_timesteps], color='k')\n",
-    "axs[0].set_ylim(5, 100)\n",
+    "axs[0].plot(raw_d_gt[:n_timesteps], color='k'); \n",
+    "axs[0].plot(200-np.array(raw_d_gt[:n_timesteps]), color='k', ls=':'); \n",
+    "axs[0].axhline(DIST_THRESH, color='C1'); \n",
+    "axs[0].set_ylim(5, 100); axs[0].legend(); axs[0].grid(True)\n",
+    "axs[1].set_yscale('log'); axs[1].grid(True)\n",
+    "axs[1].axhline(STD_THRESH, color='C1'); \n",
     "\n",
-    "axs[0].plot\n",
-    "axs[0].legend()\n",
-    "axs[1].set_yscale('log')"
+    "fig, ax = plt.subplots()\n",
+    "average_higher_d = np.log10(np.mean(results_matrix_moving[-3:, :], axis=0))\n",
+    "plt.plot(average_higher_d)\n",
+    "plt.grid()\n",
+    "plt.axhline(TAIL_THRESH, color='C1')\n",
+    "fig.set_size_inches(20, 5)\n",
+    "\n",
+    "fig, ax = plot_matrix(DISTANCES_CM, results_matrix_moving, distances_wall1[:n_timesteps], xvalues=times[:n_timesteps], \n",
+    "                      no_deco=no_deco)\n",
+    "fig.set_size_inches(20, 10)\n",
+    "ax.set_xticks(np.arange(results_matrix_moving.shape[1], step=25))\n",
+    "ax.set_xticklabels(np.arange(results_matrix_moving.shape[1], step=25))\n",
+    "ax.scatter(np.arange(len(d_estimates)), d_estimates, color=colors)\n",
+    "add_rect(ax, WallDetection.N_CALIBRATION, max(DISTANCES_CM), no_deco=no_deco)\n",
+    "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plot_matrix(DISTANCES_CM, results_matrix_moving, distances[:n_timesteps], xvalues=times[:n_timesteps], \n",
-    "                      no_deco=no_deco)\n",
-    "fig.set_size_inches(20, 10)\n",
-    "ax.scatter(np.arange(len(d_estimates)), d_estimates, color=colors)\n",
-    "add_rect(ax, N_CALIBRATION, max(DISTANCES_CM), no_deco=no_deco)\n",
-    "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
+    "from progressbar import ProgressBar\n",
+    "from crazyflie_demo.wall_detection import WallDetection\n",
+    "import itertools\n",
+    "\n",
+    "methods = [\"distance-mean\", \"distance-max\", \"std\", \"tail\"]\n",
+    "\n",
+    "parameters = {\n",
+    "    \"calibration\": [(\"iir\", alpha_iir) for alpha_iir in np.arange(0.1, 0.7, step=0.2)] \n",
+    "                 + [(\"window\", n_calib) for n_calib in np.arange(3, 4)]\n",
+    "                 + [(\"fixed\", n_calib) for n_calib in np.arange(2, 11, step=2)],\n",
+    "    #\"mask_bad\": [(\"fixed\", None), (\"adaptive\", 2), (\"adaptive\", 4), (\"adaptive\", 10), (None, None)],\n",
+    "    \"mask_bad\": [(\"adaptive\", 10),(\"fixed\", None), (None, None)], \n",
+    "    \"n_window\": [10] #[3, 5, 10] \n",
+    "}\n",
+    "\n",
+    "n_cols = len(list(itertools.product(*parameters.values())))\n",
+    "print(f\"running {n_cols} experiments\")\n",
+    "result_df = pd.DataFrame(columns=[\"calibration_name\", \"calibration_param\", \"mask_bad\", \"outlier_factor\", \"n_window\", \"type\", \"error_counter\"]\n",
+    "                         + methods, index=range(n_cols * 2))\n",
+    "\n",
+    "    \n",
+    "counter = 0\n",
+    "progressbar = ProgressBar(maxval=n_cols*2)\n",
+    "progressbar.start()\n",
+    "for calib, mask_bad, n_window in itertools.product(*parameters.values()):\n",
+    "    print(\"experiment\", calib, mask_bad, n_window)\n",
+    "    WallDetection.CALIBRATION = calib[0]\n",
+    "    if calib[0] == \"iir\":\n",
+    "        WallDetection.N_CALIBRATION = 2\n",
+    "        WallDetection.ALPHA_IIR = calib[1]\n",
+    "    else:\n",
+    "        WallDetection.N_CALIBRATION = calib[1]\n",
+    "    WallDetection.MASK_BAD = mask_bad[0]\n",
+    "    WallDetection.OUTLIER_FACTOR = mask_bad[1]\n",
+    "    WallDetection.N_WINDOW = n_window\n",
+    "    \n",
+    "    wall_detection = WallDetection(python_only=True)\n",
+    "    \n",
+    "    # prepare result df\n",
+    "    result_df.loc[counter, \"type\"] = \"false positives\"\n",
+    "    result_df.loc[counter + 1, \"type\"] = \"false negatives\"\n",
+    "    result_df.loc[[counter, counter+1], \"calibration_name\"] = calib[0]\n",
+    "    result_df.loc[[counter, counter+1], \"calibration_param\"] = calib[1]\n",
+    "    result_df.loc[[counter, counter+1], \"mask_bad\"] = mask_bad[0]\n",
+    "    result_df.loc[[counter, counter+1], \"outlier_factor\"] = mask_bad[1]\n",
+    "    result_df.loc[[counter, counter+1], \"n_window\"] = n_window\n",
+    "    result_df.loc[[counter, counter+1], \"error_counter\"] = 0.0\n",
+    "    for method in methods:\n",
+    "        result_df.loc[[counter, counter+1], method] = 0.0\n",
+    "    results_matrix = None\n",
+    "    \n",
+    "    calib = True\n",
+    "    for i in range(positions_cm.shape[0]):\n",
+    "        position_cm = positions_cm[i, :] \n",
+    " \n",
+    "        if (i == WallDetection.N_CALIBRATION) and (WallDetection.CALIBRATION == \"fixed\"):\n",
+    "            print(\"stop calibrating\")\n",
+    "            calib = False\n",
+    " \n",
+    "        res = wall_detection.listener_callback_offline(\n",
+    "            signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], calib=calib, timestamp=times[i]*1e3\n",
+    "        )\n",
+    "        if res is None:\n",
+    "            continue\n",
+    "            \n",
+    "        distances_cm_raw, prob_raw_dist, prob_moving_dist, prob_moving_angle = res\n",
+    "        if results_matrix is None:\n",
+    "            results_matrix = prob_moving_dist.reshape((-1, 1))\n",
+    "        else:\n",
+    "            results_matrix = np.c_[results_matrix, prob_moving_dist.reshape((-1, 1))]\n",
+    "\n",
+    "        # try different wall detection schemes\n",
+    "        for method in methods:\n",
+    "            wall = detect_wall(DISTANCES_CM, prob_moving_dist, method)\n",
+    "            if wall is None:\n",
+    "                result_df.loc[counter, \"error_counter\"] += 1\n",
+    "                result_df.loc[counter+1, \"error_counter\"] += 1\n",
+    "                continue \n",
+    "            # false positive\n",
+    "            if wall and (distances_wall1[i] > D_FALSE_POS) and (distances_wall2[i] > D_FALSE_POS):\n",
+    "                result_df.loc[counter, method] += 1\n",
+    "            # false negative\n",
+    "            elif not wall and (distances_wall1[i] < D_FALSE_NEG or distances_wall2[i] < D_FALSE_NEG):\n",
+    "                result_df.loc[counter+1, method] += 1\n",
+    "                \n",
+    "    counter += 2\n",
+    "    progressbar.update(counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolorfast(np.log10(results_matrix))\n",
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experimental"
    ]
   },
   {
