--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -731,7 +731,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from generate_flying_results import DIST_THRESH, STD_THRESH, TAIL_THRESH\n",
+    "from generate_classifier_results import DIST_THRESH, STD_THRESH, TAIL_THRESH\n",
     "\n",
     "def plot_distance_matrix(ax, matrix):\n",
     "    from utils.plotting_tools import pcolorfast_custom\n",
@@ -925,7 +925,10 @@
    "outputs": [],
    "source": [
     "try:\n",
+    "    # full results with all paramteres\n",
     "    #matrix_df = pd.read_pickle(\"results/DistanceFlying_matrices.pkl\")\n",
+    "    \n",
+    "    # results with a bit fewer parameters\n",
     "    matrix_df_0 = pd.read_pickle(\"results/DistanceFlying_matrices_std0.pkl\")\n",
     "    matrix_df_1 = pd.read_pickle(\"results/DistanceFlying_matrices_std1.pkl\")\n",
     "    matrix_df = pd.concat([matrix_df_0, matrix_df_1])\n",
@@ -941,7 +944,6 @@
    "outputs": [],
    "source": [
     "categories = matrix_df.columns.drop([\"matrix distances\", \"matrix angles\"]).values\n",
-    "print(\"Categories:\")\n",
     "\n",
     "def get_title(row, ignore=[]):\n",
     "    title = ''\n",
@@ -954,7 +956,6 @@
     "                param_value = round(param_value, 1)\n",
     "            title += f'{param_name}: {param_value}, '\n",
     "    return title\n",
-    "\n",
     "print(get_title(row))"
    ]
   },
@@ -1125,14 +1126,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# based on above, choose parameters. \n",
     "\n",
-    "from generate_classifier_results import get_groundtruth_distances, get_precision_recall\n",
+    "from generate_classifier_results import get_groundtruth_distances, get_precision_recall, THRESHOLDS_DICT\n",
     "from utils.pandas_utils import filter_by_dict\n",
     "\n",
+    "chosen_method = \"distance-mean\"\n",
     "chosen_dict = {\n",
     "    \"n window\": None, # is filled below\n",
     "    \"simplify angles\": False,\n",
@@ -1146,17 +1150,31 @@
     "matrix_df.loc[~matrix_df[\"mask bad\"].isin([\"adaptive\", \"fixed\"]), \"mask bad\"] = \"None\"\n",
     "matrix_df = matrix_df.apply(pd.to_numeric, errors='ignore', axis=0)\n",
     "matrix_df[\"calibration param\"] = np.round(matrix_df[\"calibration param\"], 1)\n",
-    "plt.figure()\n",
     "\n",
-    "for n_window in (3, 5, 10):\n",
+    "fig, ax = plt.subplots()\n",
+    "delta = 0.05\n",
+    "for i_window, n_window in enumerate([3, 5, 10]):\n",
     "    chosen_dict[\"n window\"] = n_window\n",
     "    rows = filter_by_dict(matrix_df, chosen_dict)\n",
+    "    #[print(key, matrix_df[key].unique()) for key in chosen_dict.keys()]\n",
     "    assert len(rows) == 1, len(rows)\n",
     "    matrix = rows.iloc[0][\"matrix distances\"][0]\n",
-    "    precision, recall = get_precision_recall(matrix, distances_wall, method=\"distance-mean\") \n",
-    "\n",
-    "    plt.plot(precision, recall, marker='o', label=f\"n window: {n_window}\")\n",
-    "plt.legend()"
+    "    precision, recall = get_precision_recall(matrix, distances_wall, method=chosen_method, verbose=False, sort=False) \n",
+    "    ax.plot(precision, recall, marker='o', label=f\"n window: {n_window}\")\n",
+    "    thresholds = THRESHOLDS_DICT[chosen_method]\n",
+    "    for t, p, r in zip(thresholds, precision, recall):\n",
+    "        if r < 1: \n",
+    "            ax.annotate(t, (p + -delta*i_window, r+delta*i_window))\n",
+    "    fig_mat, ax_mat = plt.subplots()\n",
+    "    ax_mat.pcolorfast(np.arange(matrix.shape[1]), DISTANCES_CM, np.log10(matrix))\n",
+    "    ax_mat.plot(DISTANCES_CM[np.argmax(matrix, axis=0)], color='white')\n",
+    "ax.set_xlabel(\"precision\")\n",
+    "ax.set_ylabel(\"recall\")\n",
+    "ax.set_xlim(-0.1, 1.1)\n",
+    "ax.set_ylim(-0.1, 1.1)\n",
+    "ax.grid(True)\n",
+    "plt.tight_layout()\n",
+    "ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])"
    ]
   },
   {
