--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -66,7 +66,13 @@
     "            snr=5,\n",
     "            fit_one_gain=False,\n",
     "        )\n",
-    "    return calib_function_median"
+    "    return calib_function_median\n",
+    "\n",
+    "def get_estimates_here(results_matrix, xvalues):\n",
+    "    valid = np.any(results_matrix > 0, axis=0)\n",
+    "    estimates = xvalues[np.argmax(results_matrix, axis=0)].astype(float)\n",
+    "    estimates[~valid] = np.nan\n",
+    "    return estimates"
    ]
   },
   {
@@ -75,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_positions(ax, positions_cm, wall_y_cm=100):\n",
+    "def plot_positions(ax, positions_cm, walls):\n",
     "    from matplotlib import cm\n",
     "    \n",
     "    cmap = cm.get_cmap('inferno') \n",
@@ -91,7 +97,12 @@
     "    ax.axis('equal')\n",
     "    ax.set_xlabel('x [cm]')\n",
     "    ax.set_ylabel('y [cm]')\n",
-    "    ax.axhline(y=wall_y_cm, color='k', label='wall')\n",
+    "    \n",
+    "    for wall_distance, wall_angle in walls:\n",
+    "        print(wall_distance, wall_angle)\n",
+    "        ax.arrow(0, 0, wall_distance * np.cos(wall_angle / 180 * np.pi), \n",
+    "                 wall_distance * np.sin(wall_angle / 180 * np.pi), color='k', label='_wall', \n",
+    "                 width=1)\n",
     "    ax.grid()\n",
     "    ax.legend()"
    ]
@@ -102,34 +113,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_estimates_here(results_matrix, xvalues):\n",
-    "    valid = np.any(results_matrix > 0, axis=0)\n",
-    "    estimates = xvalues[np.argmax(results_matrix, axis=0)].astype(float)\n",
-    "    estimates[~valid] = np.nan\n",
-    "    return estimates\n",
-    "\n",
-    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True):\n",
+    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True, add_rect=False):\n",
     "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
+    "    \n",
+    "    cmap = plt.get_cmap().copy() \n",
+    "    cmap.set_bad('gray')\n",
     "    if xvalues is None:\n",
-    "        xvalues = gt_values\n",
-    "        xlabel = \"real angle [deg]\" if angles else \"real distance [cm]\"\n",
+    "        xvalues = np.arange(results_matrix.shape[1])\n",
+    "        xlabel = \"index [-]\"\n",
     "    else:\n",
     "        xlabel = \"time [s]\"\n",
     "        \n",
-    "    n_xticks =  10\n",
-    "    n_yticks = 5\n",
-    "    xticks = xvalues[::len(xvalues)//n_xvalues]\n",
-    "    yticks = yticks[::len(yvalues)//n_xvalues]\n",
-    "        \n",
     "    estimates = get_estimates_here(results_matrix, yvalues)\n",
-    "    n_points = results_matrix.shape[1]\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(2 * FIGSIZE, FIGSIZE)\n",
     "    \n",
-    "    im = ax.pcolorfast(np.arange(n_points), yvalues, np.log10(results_matrix) if log else results_matrix)\n",
+    "    im = ax.pcolormesh(xvalues, yvalues, np.log10(results_matrix) if log else results_matrix, cmap=cmap)\n",
     "    \n",
     "    ax.plot(\n",
-    "        np.arange(n_points) + 0.5,\n",
+    "        xvalues,\n",
     "        gt_values,\n",
     "        color=\"black\",\n",
     "        label=\"ground truth\",\n",
@@ -137,7 +139,7 @@
     "    )\n",
     "    ax.set_ylim(min(yvalues), max(yvalues))\n",
     "    ax.plot(\n",
-    "        np.arange(n_points) + 0.5,\n",
+    "        xvalues,\n",
     "        estimates,\n",
     "        color=\"white\",\n",
     "        label=\"estimates\",\n",
@@ -152,23 +154,28 @@
     "        ax.set_ylabel(\"estimated angle [deg]\" if angles else \"estimated distance [cm]\")\n",
     "        ax.set_xlabel(xlabel)\n",
     "        \n",
-    "        #ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
     "        leg = ax.legend(framealpha=0, loc='upper right')\n",
     "        for text in leg.get_texts():\n",
     "            plt.setp(text, color='w')\n",
-    "            \n",
-    "        ax.set_xticks(np.round(xvalues, 1), rotation=90)\n",
-    "        ax.set_xticklabels(np.round(xvalues, 1), rotation=90)\n",
-    "        ax.set_yticks(np.arange(min(yvalues), max(yvalues), step=10))\n",
-    "        ax.set_yticklabels(np.arange(min(yvalues), max(yvalues), step=10).astype(int))\n",
-    "    return fig, ax\n",
-    "\n",
-    "def add_rect(ax, width, height, no_deco=False, alpha=0.5):\n",
-    "    from matplotlib.patches import Rectangle\n",
-    "    rect = Rectangle((0, 0), width, height, facecolor='white', alpha=alpha)\n",
-    "    ax.add_patch(rect)\n",
-    "    if not no_deco:\n",
-    "        ax.text(width/2, 7, \"used for\\ncalibration\", fontdict={'color':'white', 'ha':'center', 'va':'bottom'})"
+    "        #ax.set_xticks(xticks, labels=xticklabels)\n",
+    "        #ax.set_yticks(yticks, labels=yticks)\n",
+    "        #n_xticks = 5\n",
+    "        #step = len(xvalues) // n_xticks\n",
+    "        #ax.set_xticks(np.round(xvalues[::step], 1))\n",
+    "        #ax.set_xticklabels(np.round(xvalues[::step], 1))\n",
+    "        \n",
+    "    if add_rect:\n",
+    "        from matplotlib.patches import Rectangle\n",
+    "        width = xvalues[n_calib] - xvalues[0]\n",
+    "        height= max(yvalues) - min(yvalues)\n",
+    "        alpha = 0.5\n",
+    "        diff_x = xvalues[1] - xvalues[0]\n",
+    "        xy = (min(xvalues) - diff_x/2, min(yvalues))\n",
+    "        rect = Rectangle(xy, width, height, facecolor='white', alpha=alpha)\n",
+    "        ax.add_patch(rect)\n",
+    "        if not no_deco:\n",
+    "            ax.text(xy[0] + width/2, xy[1]+height/2, \"used for\\ncalibration\", fontdict={'color':'white', 'ha':'center', 'va':'bottom'})\n",
+    "    return fig, ax"
    ]
   },
   {
@@ -188,6 +195,7 @@
    "source": [
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "from crazyflie_description_py.parameters import FLYING_HEIGHT_CM\n",
+    "from generate_classifier_results import get_groundtruth_distances, WALLS_DICT\n",
     "\n",
     "from utils.plotting_tools import FIGSIZE, save_fig\n",
     "\n",
@@ -210,7 +218,10 @@
     "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "].iloc[0]\n",
     "\n",
-    "from generate_classifier_results import get_groundtruth_distances\n",
+    "bad_freqs = []\n",
+    "n_calib = 5\n",
+    "\n",
+    "\n",
     "flying = row.positions[:, 2] > FLYING_HEIGHT_CM * 1e-2\n",
     "positions_cm = row.positions[flying, :2] * 1e2\n",
     "yaws_deg = row.positions[flying, 3]\n",
@@ -242,7 +253,7 @@
     "# plot positions\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
-    "plot_positions(ax, positions_cm, wall_y_cm=wall_y_cm)\n",
+    "plot_positions(ax, positions_cm, WALLS_DICT[exp_name])\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
     "save_fig(fig, plot_name)"
    ]
@@ -260,6 +271,7 @@
     "from utils.inference import Inference\n",
     "from utils.estimators import DistanceEstimator\n",
     "from utils.moving_estimators import MovingEstimator\n",
+    "from utils.particle_estimators import ParticleEstimator\n",
     "\n",
     "# for live analysis\n",
     "from crazyflie_demo.wall_detection import DISTANCES_CM, ANGLES_DEG\n",
@@ -270,10 +282,11 @@
     "#distances_cm = np.arange(100, step=1)\n",
     "#angles_deg = np.arange(360, step=2)\n",
     "\n",
+    "#particle_method = \"gaussian\"\n",
+    "particle_method = \"histogram\"\n",
     "n_calib = 5\n",
     "n_window = 5\n",
-    "bad_freqs = []\n",
-    "simplify_angles = False\n",
+    "simplify_angles = True\n",
     "\n",
     "calib_method_list = [\"on_the_fly\"]#, [\"stepper\"]\n",
     "mics_list = [[0, 1, 2, 3]] #, [[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
@@ -282,7 +295,6 @@
     "errors_df = pd.DataFrame(\n",
     "    columns=[\"algorithm\", \"mics\", \"calib_method\", \"estimates\", \"distances\", \"appendix\", \"time\"]\n",
     ")\n",
-    "\n",
     "\n",
     "inf_machine = Inference()\n",
     "dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
@@ -306,6 +318,10 @@
     "    moving_estimator = MovingEstimator(n_window=n_window, distances_cm=distances_cm, angles_deg=angles_deg)\n",
     "    results_matrix_angles_moving = np.full((len(moving_estimator.angles_deg), n_points), np.nan)\n",
     "    results_matrix_moving = np.full((len(moving_estimator.distances_cm), n_points), np.nan)\n",
+    "    \n",
+    "    particle_estimator = ParticleEstimator(n_particles=100, global_=False)\n",
+    "    results_matrix_angles_part = np.full((len(particle_estimator.ANGLES_DEG), n_points), np.nan)\n",
+    "    results_matrix_part = np.full((len(particle_estimator.get_distances_cm()), n_points), np.nan)\n",
     "\n",
     "    time_moving = 0\n",
     "    time_single = 0\n",
@@ -333,9 +349,15 @@
     "        moving_estimator.add_distributions(\n",
     "            diff_moving, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "        )\n",
+    "        particle_estimator.add_distributions(\n",
+    "            diff_moving, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
+    "        )\n",
+    "        \n",
     "        __, prob_moving, __, prob_angle_moving = moving_estimator.get_distributions(simplify_angles=simplify_angles)\n",
     "        time_moving += int(1000*(time.time() - t1))\n",
-    "\n",
+    "        \n",
+    "        __, prob_part, __, prob_angle_part = particle_estimator.get_distributions(simplify_angles=simplify_angles, method=particle_method)\n",
+    "        \n",
     "        dist_est_cm = dists_cm[np.argmax(prob_moving)]\n",
     "        __, prob_angle = distance_estimator.get_angle_distribution(\n",
     "            distance_estimate_m=dist_est_cm*1e-2\n",
@@ -345,6 +367,8 @@
     "        results_matrix_angles[:, i] = prob_angle\n",
     "        results_matrix_moving[:, i] = prob_moving \n",
     "        results_matrix_angles_moving[:, i] = prob_angle_moving \n",
+    "        results_matrix_part[:, i] = prob_part\n",
+    "        results_matrix_angles_part[:, i] = prob_angle_part\n",
     "\n",
     "        continue\n",
     "        # DEBUGGING ONLY\n",
@@ -377,7 +401,8 @@
     "        \"distances\": distances,\n",
     "        \"appendix\": appendix,\n",
     "        \"time\": time_moving / n_points \n",
-    "    }"
+    "    }\n",
+    "print(\"done\")"
    ]
   },
   {
@@ -388,26 +413,25 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plot_matrix(dists_cm, results_matrix, distances, xvalues=times, no_deco=no_deco)\n",
-    "if calib_method == 'on_the_fly':\n",
-    "    add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
-    "    \n",
+    "fig, ax = plot_matrix(dists_cm, results_matrix, distances, xvalues=times, no_deco=no_deco, \n",
+    "                      add_rect=calib_method==\"on_the_fly\")\n",
     "#save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
-    "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, xvalues=times,no_deco=no_deco)\n",
-    "if calib_method == 'on_the_fly':\n",
-    "    add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
+    "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, xvalues=times,no_deco=no_deco,\n",
+    "                      add_rect=calib_method==\"on_the_fly\")\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
+    "fig, ax = plot_matrix(particle_estimator.get_distances_cm(), results_matrix_part, distances, xvalues=times, no_deco=no_deco,\n",
+    "                      add_rect=calib_method==\"on_the_fly\")\n",
     "\n",
     "gt_angles = np.full(len(distances), 90)\n",
     "fig, ax = plot_matrix(azimuths_deg, results_matrix_angles, gt_angles, xvalues=times,\n",
-    "                      no_deco=no_deco, angles=True, log=False)\n",
-    "if calib_method == 'on_the_fly':\n",
-    "    add_rect(ax, n_calib, max(azimuths_deg), no_deco=no_deco)\n",
-    "\n",
+    "                      no_deco=no_deco, angles=True,  \n",
+    "                      add_rect=calib_method==\"on_the_fly\")\n",
     "fig, ax = plot_matrix(np.array(angles_deg), results_matrix_angles_moving,  gt_angles, xvalues=times,\n",
-    "                      no_deco=no_deco, log=False, angles=True)\n",
-    "if calib_method == 'on_the_fly':\n",
-    "    add_rect(ax, n_calib, max(angles_deg), no_deco=no_deco)"
+    "                      no_deco=no_deco, log=False, angles=True,\n",
+    "                      add_rect=calib_method==\"on_the_fly\")\n",
+    "fig, ax = plot_matrix(np.array(particle_estimator.ANGLES_DEG), results_matrix_angles_part,  gt_angles, xvalues=times,\n",
+    "                      no_deco=no_deco, log=False, angles=True,\n",
+    "                      add_rect=calib_method==\"on_the_fly\")"
    ]
   },
   {
@@ -457,7 +481,9 @@
     "    #print(f\"position: {position_cm[0], position_cm[1]}\")\n",
     "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw)\n",
     "    \n",
-    "    distance_gt = int(wall_y_cm - position_cm[1])\n",
+    "    distance_gt = distances[i]\n",
+    "    print(distance_gt)\n",
+    "    \n",
     "    if use_groundtruth:\n",
     "        prob_dists = np.zeros(len(distances_cm))\n",
     "        idx = np.where(distances_cm == distance_gt)[0]\n",
