--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -286,7 +286,7 @@
     "particle_method = \"histogram\"\n",
     "n_calib = 5\n",
     "n_window = 5\n",
-    "simplify_angles = True\n",
+    "simplify_angles = False\n",
     "\n",
     "calib_method_list = [\"on_the_fly\"]#, [\"stepper\"]\n",
     "mics_list = [[0, 1, 2, 3]] #, [[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
@@ -465,7 +465,7 @@
     "dist_matrix = results_matrix_moving\n",
     "angle_matrix = results_matrix_angles_moving\n",
     "n_estimates = 1\n",
-    "print(angle_matrix.shape, dist_matrix.shape)\n",
+    "#print(angle_matrix.shape, dist_matrix.shape)\n",
     "\n",
     "d_estimates = []\n",
     "d_gt = []\n",
@@ -475,14 +475,11 @@
     "    if i < n_calib:\n",
     "        continue\n",
     "    \n",
-    "    position_cm = positions_cm[i, :]\n",
+    "    position_cm = np.r_[positions_cm[i, :], 0.0]\n",
     "    yaw = yaws_deg[i] / 180 * np.pi\n",
-    "    #print(f\"yaw: {yaws_deg[i]:.1f}deg\")\n",
-    "    #print(f\"position: {position_cm[0], position_cm[1]}\")\n",
-    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw)\n",
+    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw, verbose=False)\n",
     "    \n",
     "    distance_gt = distances[i]\n",
-    "    print(distance_gt)\n",
     "    \n",
     "    if use_groundtruth:\n",
     "        prob_dists = np.zeros(len(distances_cm))\n",
@@ -494,13 +491,13 @@
     "    else:\n",
     "        prob_angles = angle_matrix[:, i]\n",
     "        \n",
-    "    wall_backend.add_planes_from_distributions(distances_cm, prob_dists, \n",
-    "                                               angles_deg, prob_angles, \n",
+    "    wall_backend.add_planes_from_distributions(np.array(distances_cm), prob_dists, \n",
+    "                                               np.array(angles_deg), prob_angles, \n",
     "                                               limit_distance=20,\n",
     "                                               n_estimates=n_estimates, \n",
     "                                               verbose=False)\n",
     "    \n",
-    "    wall_backend.check_wall(verbose=True)\n",
+    "    wall_backend.check_wall(verbose=False)\n",
     "    distance_estimate = wall_backend.get_distance_estimate()\n",
     "    d_estimates.append(distance_estimate * 1e2 if distance_estimate else np.nan)\n",
     "    d_gt.append(distance_gt if distance_estimate else np.nan)\n",
